--- a/index.html
+++ b/index.html
@@ -1,97 +1,71 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sergio Sabater Ruiz - Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sergio Sabater Ruiz - Portfolio</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Sergio Sabater Ruiz</h1>
-            <p>Estudiante de Ingeniería Telemática | Apasionado por la Programación y la Inteligencia Artificial</p>
-            <div class="social-links">
-                <a href="https://www.linkedin.com/in/sergio-telematico/" target="_blank">LinkedIn</a> | 
-                <a href="https://github.com/tuusuario" target="_blank">GitHub</a>
-            </div>
-        </div>
-    </header>
 
-    <section id="about">
-        <div class="container">
-            <h2>Acerca de mí</h2>
-            <p>¡Hola! Soy Sergio Sabater, estudiante de Ingeniería Telemática en la Universidad de Valencia. Estoy en el 4º año de mi carrera y me apasionan la programación, las redes de comunicación y la inteligencia artificial. A lo largo de mi carrera, he participado en proyectos y concursos como el Premio Gennera 2025.</p>
-        </div>
-    </section>
+  <header>
+    <h1>Sergio Sabater Ruiz</h1>
+    <p>Estudiante de Ingeniería Telemática | Apasionado por la tecnología, el emprendimiento y la innovación</p>
+  </header>
 
-    <section id="projects">
-        <div class="container">
-            <h2>Proyectos</h2>
-            <ul>
-                <li>
-                    <h3>Premio Gennera 2025</h3>
-                    <p>Ganador del Premio Gennera 2025, destacando por el desarrollo de una solución innovadora en telecomunicaciones.</p>
-                </li>
-                <li>
-                    <h3>Concurso Idees Motivem</h3>
-                    <p>Quedé tercero en el Motivem Fest. Este concurso me permitió poner en práctica mis habilidades de emprendimiento.</p>
-                </li>
-            </ul>
-        </div>
-    </section>
+  <nav>
+    <a href="#sobre-mi">Sobre mí</a>
+    <a href="#proyectos">Proyectos</a>
+    <a href="#habilidades">Habilidades</a>
+    <a href="#contacto">Contacto</a>
+  </nav>
 
-    <section id="skills">
-        <div class="container">
-            <h2>Habilidades</h2>
-            <h3>Técnicas</h3>
-            <ul>
-                <li>C++, Python, Java, JavaScript, HTML, CSS</li>
-                <li>Certificados en Testing, Integración Continua, Machine Learning y Python</li>
-            </ul>
-            <h3>Blandas</h3>
-            <ul>
-                <li>Resolución de problemas</li>
-                <li>Trabajo en equipo</li>
-                <li>Comunicación efectiva</li>
-            </ul>
-        </div>
-    </section>
+  <section id="sobre-mi">
+    <h2>Sobre mí</h2>
+    <p>Soy estudiante de cuarto curso de Ingeniería Telemática en la Universitat de València. Me apasiona la tecnología, la Fórmula 1, la música y el emprendimiento.</p>
+    <p>He ganado el <strong>Premio Gennera 2025</strong> con un proyecto de innovación, participé en el concurso <strong>Idees MOTIVEM</strong> quedando tercero en el MOTIVEM Fest, y tengo certificaciones en Python, Machine Learning y Testing.</p>
+  </section>
 
-    <section id="education">
-        <div class="container">
-            <h2>Educación</h2>
-            <p>Estudios de Ingeniería Telemática en la Universidad de Valencia (4º Año).</p>
-        </div>
-    </section>
+  <section id="proyectos">
+    <h2>Proyectos</h2>
 
-    <section id="experience">
-        <div class="container">
-            <h2>Experiencia</h2>
-            <ul>
-                <li>
-                    <h3>Voluntariado en la Escuela de Verano de Meliana</h3>
-                    <p>Participé durante 2 años en la organización de actividades educativas y recreativas para niños.</p>
-                </li>
-                <li>
-                    <h3>Prácticas de Monitor de Ocio y Tiempo Libre</h3>
-                    <p>Me encargué de coordinar actividades y gestionar grupos de niños en la misma escuela.</p>
-                </li>
-            </ul>
-        </div>
-    </section>
+    <div class="project">
+      <h3>Premio Gennera 2025</h3>
+      <p>Proyecto de innovación premiado en la Universidad de Valencia, abordando retos sociales mediante soluciones tecnológicas.</p>
+    </div>
 
-    <section id="contact">
-        <div class="container">
-            <h2>Contacto</h2>
-            <p>Correo electrónico: <a href="mailto:sergio.telematico@gmail.com">sergio.telematico@gmail.com</a></p>
-        </div>
-    </section>
+    <div class="project">
+      <h3>Idees MOTIVEM</h3>
+      <p>Proyecto universitario de emprendimiento que logró el tercer puesto en el certamen MOTIVEM Fest. Aplicación de conocimientos de negocio y creatividad tecnológica.</p>
+    </div>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Sergio Sabater Ruiz. Todos los derechos reservados.</p>
-        </div>
-    </footer>
+  </section>
+
+  <section id="habilidades">
+    <h2>Habilidades</h2>
+    <div class="skills">
+      <span class="skill">C++</span>
+      <span class="skill">C</span>
+      <span class="skill">Python</span>
+      <span class="skill">Java</span>
+      <span class="skill">HTML</span>
+      <span class="skill">CSS</span>
+      <span class="skill">JavaScript</span>
+      <span class="skill">Testing</span>
+      <span class="skill">Machine Learning</span>
+    </div>
+  </section>
+
+  <section id="contacto">
+    <h2>Contacto</h2>
+    <p>Email: <a href="mailto:sergio.telematico@gmail.com">sergio.telematico@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/sergio-sabater-ruiz" target="_blank">sergio-sabater-ruiz</a></p>
+    <p>GitHub: <a href="https://github.com/SergioSaba12" target="_blank">SergioSaba12</a></p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Sergio Sabater Ruiz · Portfolio personal</p>
+  </footer>
+
 </body>
 </html>
