--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sergio Sabater Ruiz - Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
 
@@ -18,37 +19,54 @@
     <a href="#proyectos">Proyectos</a>
     <a href="#habilidades">Habilidades</a>
     <a href="#logros">Logros</a>
+    <a href="#testimonios">Testimonios</a>
     <a href="#contacto">Contacto</a>
   </nav>
 
   <section id="sobre-mi" class="section">
     <h2>Sobre mí</h2>
-    <p>Soy estudiante de Ingeniería Telemática en la Universitat de València. Me apasionan la tecnología, la innovación y el emprendimiento.</p>
+    <p>Soy estudiante de Ingeniería Telemática en la Universitat de València. Me apasionan la tecnología, la innovación y el emprendimiento. Mi enfoque está en el desarrollo de software, aprendizaje automático y redes.</p>
   </section>
 
   <section id="proyectos" class="section">
     <h2>Proyectos</h2>
-    <div class="project">
-      <h3>Premio Gennera 2025</h3>
-      <p>Proyecto galardonado que se centra en soluciones innovadoras para retos sociales.</p>
-    </div>
-    <div class="project">
-      <h3>Idees MOTIVEM</h3>
-      <p>Proyecto premiado en el certamen MOTIVEM Fest, destacando en el emprendimiento tecnológico.</p>
+    <div class="carousel">
+      <div class="carousel-item">
+        <img src="images/proyecto1.jpg" alt="Proyecto Gennera">
+        <div class="carousel-caption">
+          <h3>Premio Gennera 2025</h3>
+          <p>Un proyecto galardonado que aborda la innovación tecnológica y los retos sociales.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/proyecto2.jpg" alt="Idees MOTIVEM">
+        <div class="carousel-caption">
+          <h3>Idees MOTIVEM</h3>
+          <p>Mi participación en el certamen MOTIVEM Fest, donde quedé tercero en la categoría de emprendimiento.</p>
+        </div>
+      </div>
     </div>
   </section>
 
   <section id="habilidades" class="section">
     <h2>Habilidades</h2>
     <div class="skills">
-      <span class="skill">C++</span>
-      <span class="skill">Python</span>
-      <span class="skill">Java</span>
-      <span class="skill">HTML</span>
-      <span class="skill">CSS</span>
-      <span class="skill">JavaScript</span>
-      <span class="skill">Machine Learning</span>
-      <span class="skill">Testing</span>
+      <div class="skill-bar">
+        <span>C++</span>
+        <div class="bar" style="width: 85%"></div>
+      </div>
+      <div class="skill-bar">
+        <span>Python</span>
+        <div class="bar" style="width: 90%"></div>
+      </div>
+      <div class="skill-bar">
+        <span>JavaScript</span>
+        <div class="bar" style="width: 80%"></div>
+      </div>
+      <div class="skill-bar">
+        <span>Machine Learning</span>
+        <div class="bar" style="width: 70%"></div>
+      </div>
     </div>
   </section>
 
@@ -59,16 +77,16 @@
         <div class="timeline-date">2025</div>
         <div class="timeline-content">
           <h3>Premio Gennera 2025</h3>
-          <p>He ganado el Premio Gennera con un proyecto centrado en la innovación tecnológica.</p>
+          <p>Ganador del Premio Gennera con un proyecto innovador centrado en la resolución de problemas sociales mediante tecnología.</p>
         </div>
       </div>
-      <div class="timeline-item">
-        <div class="timeline-date">2024</div>
-        <div class="timeline-content">
-          <h3>Certificación en Python</h3>
-          <p>Completé un curso avanzado en Python ofrecido por el Banco Santander.</p>
-        </div>
-      </div>
+    </div>
+  </section>
+
+  <section id="testimonios" class="section">
+    <h2>Testimonios</h2>
+    <div class="testimonial">
+      <p>"Sergio es un estudiante brillante con una gran capacidad de aprendizaje y desarrollo. Su pasión por la tecnología lo lleva siempre a destacar." - Profesor en la Universitat de València</p>
     </div>
   </section>
 
@@ -83,5 +101,7 @@
     <p>&copy; 2025 Sergio Sabater Ruiz · Portfolio personal</p>
   </footer>
 
+  <script src="scripts.js"></script>
 </body>
 </html>
+
