--- a/index.html
+++ b/index.html
@@ -1,107 +1,129 @@
-<!DOCTYPE html<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sergio Sabater Ruiz - Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio de Sergio Sabater Ruiz</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
 
-  <header>
-    <h1>Sergio Sabater Ruiz</h1>
-    <p class="subtitle">Estudiante de Ingeniería Telemática | Emprendedor y Apasionado por la tecnología</p>
-  </header>
-
-  <nav>
-    <a href="#sobre-mi">Sobre mí</a>
-    <a href="#proyectos">Proyectos</a>
-    <a href="#habilidades">Habilidades</a>
-    <a href="#logros">Logros</a>
-    <a href="#testimonios">Testimonios</a>
-    <a href="#contacto">Contacto</a>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">Sergio Sabater Ruiz</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#sobre-mi">Sobre Mí</a></li>
+          <li class="nav-item"><a class="nav-link" href="#premios">Premios</a></li>
+          <li class="nav-item"><a class="nav-link" href="#tecnologias">Tecnologías</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+        </ul>
+      </div>
+    </div>
   </nav>
 
-  <section id="sobre-mi" class="section">
-    <h2>Sobre mí</h2>
-    <p>Soy estudiante de Ingeniería Telemática en la Universitat de València. Me apasionan la tecnología, la innovación y el emprendimiento. Mi enfoque está en el desarrollo de software, aprendizaje automático y redes.</p>
+  <header class="hero text-center position-relative">
+    <div class="container">
+      <img src="yo.jpg" alt="Foto de Sergio" class="profile-img">
+      <h1>Sergio Sabater Ruiz</h1>
+      <p class="lead">Estudiante de Ingeniería Telemática · Universidad de Valencia</p>
+      <!-- Nuevo botón de llamada a la acción -->
+      <a href="#sobre-mi" class="btn btn-light btn-lg mt-3">Descubre más</a>
+    </div>
+    <div class="hero-overlay position-absolute bottom-0 w-100">
+      <svg viewBox="0 0 1440 320" preserveAspectRatio="none" style="display: block;">
+        <path fill="#0056b3" fill-opacity="1" d="M0,256L48,245.3C96,235,192,213,288,186.7C384,160,480,128,576,106.7C672,85,768,75,864,80C960,85,1056,107,1152,133.3C1248,160,1344,192,1392,208L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+      </svg>
+    </div>
+  </header>
+
+  <section id="sobre-mi" class="container py-5">
+    <h2 class="text-center section-title">Sobre Mí</h2>
+    <p class="text-center">
+      Soy estudiante de Ingeniería Telemática en la Universidad de Valencia, apasionado por la tecnología, el desarrollo de software y la innovación. A lo largo de mi carrera, he trabajado con diversos lenguajes de programación como C++, Python, Java, y tecnologías web como HTML, CSS y JavaScript. Mi objetivo siempre ha sido aplicar mis conocimientos en soluciones tecnológicas que tengan un impacto real.
+    </p>
+    <p class="text-center">
+      Uno de los logros de los que más me enorgullezco es haber sido galardonado con el Premio Gennera 2025, que reconoce proyectos innovadores dentro del ámbito universitario. Este premio fue un hito importante para mí, ya que me permitió llevar a cabo una propuesta que aplicó mis habilidades técnicas en un proyecto práctico, demostrando mi capacidad para abordar problemas complejos y encontrar soluciones creativas.
+    </p>
+    <p class="text-center">
+      Además de mi formación técnica, también soy un trompista profesional y he realizado voluntariado durante varios años en la Escuela de Verano de Meliana. Estas experiencias me han permitido desarrollar habilidades en liderazgo, trabajo en equipo y gestión de proyectos, lo que complementa mi perfil como ingeniero.
+    </p>
+    <p class="text-center">
+      Mi visión es seguir creciendo profesionalmente, enfrentando nuevos desafíos y aplicando mis habilidades tanto técnicas como personales para contribuir a proyectos innovadores y transformar ideas en soluciones reales.
+    </p>
   </section>
 
-  <section id="proyectos" class="section">
-    <h2>Proyectos</h2>
-    <div class="carousel">
-      <div class="carousel-item">
-        <img src="images/proyecto1.jpg" alt="Proyecto Gennera">
-        <div class="carousel-caption">
-          <h3>Premio Gennera 2025</h3>
-          <p>Un proyecto galardonado que aborda la innovación tecnológica y los retos sociales.</p>
+  <section id="premios" class="container py-5">
+    <h2 class="text-center section-title">Premios Destacados</h2>
+    <div class="row">
+      <div class="col-md-6 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Premio Gennera 2025</h5>
+            <p class="card-text">Reconocimiento a la innovación y liderazgo joven en el ámbito de la ingeniería.</p>
+          </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="images/proyecto2.jpg" alt="Idees MOTIVEM">
-        <div class="carousel-caption">
-          <h3>Idees MOTIVEM</h3>
-          <p>Mi participación en el certamen MOTIVEM Fest, donde quedé tercero en la categoría de emprendimiento.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="habilidades" class="section">
-    <h2>Habilidades</h2>
-    <div class="skills">
-      <div class="skill-bar">
-        <span>C++</span>
-        <div class="bar" style="width: 85%"></div>
-      </div>
-      <div class="skill-bar">
-        <span>Python</span>
-        <div class="bar" style="width: 90%"></div>
-      </div>
-      <div class="skill-bar">
-        <span>JavaScript</span>
-        <div class="bar" style="width: 80%"></div>
-      </div>
-      <div class="skill-bar">
-        <span>Machine Learning</span>
-        <div class="bar" style="width: 70%"></div>
-      </div>
-    </div>
-  </section>
-
-  <section id="logros" class="section">
-    <h2>Mis Logros</h2>
-    <div class="timeline">
-      <div class="timeline-item">
-        <div class="timeline-date">2025</div>
-        <div class="timeline-content">
-          <h3>Premio Gennera 2025</h3>
-          <p>Ganador del Premio Gennera con un proyecto innovador centrado en la resolución de problemas sociales mediante tecnología.</p>
+      <div class="col-md-6 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Motivem Fest - 3º Puesto</h5>
+            <p class="card-text">Premio obtenido en el concurso Idees Motivem por el proyecto presentado en equipo.</p>
+          </div>
         </div>
       </div>
     </div>
-  </section>
-
-  <section id="testimonios" class="section">
-    <h2>Testimonios</h2>
-    <div class="testimonial">
-      <p>"Sergio es un estudiante brillante con una gran capacidad de aprendizaje y desarrollo. Su pasión por la tecnología lo lleva siempre a destacar." - Profesor en la Universitat de València</p>
+    <div class="row">
+      <div class="col-12">
+        <img src="campeon_genera.jpg" alt="Sergio ganando el premio Gennera" class="award-img">
+      </div>
     </div>
   </section>
 
-  <section id="contacto" class="section">
-    <h2>Contacto</h2>
-    <p>Email: <a href="mailto:sergio.telematico@gmail.com">sergio.telematico@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/sergio-sabater-ruiz" target="_blank">sergio-sabater-ruiz</a></p>
-    <p>GitHub: <a href="https://github.com/SergioSaba12" target="_blank">SergioSaba12</a></p>
+  <section id="tecnologias" class="container py-5">
+    <h2 class="text-center section-title">Tecnologías</h2>
+    <div class="row text-center">
+      <div class="col-6 col-md-2">
+        C++<br><i class="fab fa-cuttlefish tech-icon"></i>
+      </div>
+      <div class="col-6 col-md-2">
+        Python<br><i class="fab fa-python tech-icon"></i>
+      </div>
+      <div class="col-6 col-md-2">
+        Java<br><i class="fab fa-java tech-icon"></i>
+      </div>
+      <div class="col-6 col-md-2">
+        HTML<br><i class="fab fa-html5 tech-icon"></i>
+      </div>
+      <div class="col-6 col-md-2">
+        CSS<br><i class="fab fa-css3-alt tech-icon"></i>
+      </div>
+      <div class="col-6 col-md-2">
+        JavaScript<br><i class="fab fa-js tech-icon"></i>
+      </div>
+    </div>
+  </section>
+
+  <section id="contacto" class="container py-5">
+    <h2 class="text-center section-title">Contacto</h2>
+    <div class="text-center">
+      <p>Email: <a href="mailto:sergio.telematico@gmail.com">sergio.telematico@gmail.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/sergio-sabater-ruiz-562753268/" target="_blank">Sergio Sabater Ruiz</a></p>
+    </div>
   </section>
 
   <footer>
-    <p>&copy; 2025 Sergio Sabater Ruiz · Portfolio personal</p>
+    <div class="container">
+      <p>&copy; 2025 Sergio Sabater Ruiz</p>
+    </div>
   </footer>
 
-  <script src="scripts.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
