--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <header class="hero text-center position-relative">
     <div class="container">
-      <img src="yo.jpg" alt="Foto de Sergio" class="profile-img">
+      <img src="./yo.jpg" alt="Foto de Sergio" class="profile-img">
       <h1>Sergio Sabater Ruiz</h1>
       <p class="lead">Estudiante de Ingeniería Telemática · Universidad de Valencia</p>
       <!-- Nuevo botón de llamada a la acción -->
@@ -81,7 +81,7 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <img src="campeon_genera.jpg" alt="Sergio ganando el premio Gennera" class="award-img">
+        <img src="./campeon_genera.jpg" alt="Sergio ganando el premio Gennera" class="award-img">
       </div>
     </div>
   </section>
