--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <img src="./campeon_genera.jpg" alt="Sergio ganando el premio Gennera" class="award-img">
+        <img src="campeon_genera.jpg" alt="Sergio ganando el premio Gennera" class="award-img">
       </div>
     </div>
   </section>
